Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37772

Canvas crashes with EGL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0 RC1
    • 5.3.0 Beta1
    • Quick: SceneGraph
    • None
    • 34335e81471e2695c74612a15f9e88d5f4e2dd7e

    Description

      Canvas elements using the default Immediate render strategy and an FBO result in a failing makeCurrent() and subsequent crashes.

      This is because making the Quick window surface current on the gui thread while it is current with another context on the render thread results in an EGL_BAD_ACCESS.

      This also makes demos like stocqt unusable on a number of systems.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes